--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,10 +1,12 @@
 # Test Configuration
 spring.application.name=eci.edu.co
 
-# MongoDB Configuration - Test
-spring.data.mongodb.uri=mongodb://localhost:27017/test
-spring.data.mongodb.database=test-db
+# MongoDB Configuration - Test (usando variables del .env)
+spring.config.import=optional:file:.env[.properties]
+spring.data.mongodb.uri=${DB_URI}
+spring.data.mongodb.database=${DB_NAME}
 spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.ssl.enabled=true
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 server.port=8081
