Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_walletservice.yml
+++ b/.github/workflows/main_walletservice.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: read #This is required for actions/checkout
 
@@ -25,7 +25,7 @@ jobs:
           distribution: 'microsoft'
 
       - name: Build with Maven
-        run: mvn clean install -DskipTests
+        run: mvn clean install
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -34,12 +34,12 @@ jobs:
           path: '${{ github.workspace }}/target/*.jar'
 
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     permissions:
       id-token: write #This is required for requesting the JWT
       contents: read #This is required for actions/checkout
-
+  
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -49,9 +49,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_80AFC0A231184C05B96B7A9FE76D3ED4 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_667252359DD242A6A92C61D401C4C981 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_51C96284D8984951A5B35907CC2C089A }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_0A2A127C6208427B9862A353A7356E82 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_EFCD3251F6194C9E995D333249159CBC }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D83A58E519B04EB1A9EAB47F7011DF90 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
