--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,16 @@
-target/
-.git/
+target
+.git
 .gitignore
-*.iml
+README.md
+.DS_Store
 *.md
-.env
-Dockerfile*
-README*
-HELP.md
+.mvn
+mvnw
+mvnw.cmd
+.idea
+.vscode
+*.iml
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
